--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/myinvest
+spring.datasource.username=myinvest
+spring.datasource.password=myinvest
+spring.jpa.hibernate.ddl-auto=update
